--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Diphylleia:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="icon-container">
